2014-12-12  Carl Hetherington  <cth@carlh.net>

	* Fix a few missing checks for Cancel in dialogs (#449).

	* Version 1.76.28 released.

2014-12-12  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.27 released.

2014-12-11  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.26 released.

2014-12-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.25 released.

2014-12-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.24 released.

2014-12-09  Carl Hetherington  <cth@carlh.net>

	* Another attempt to fix slipping sync on DTS-encoded
	soundtracks (#352).

2014-12-06  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.23 released.

2014-12-05  c.hetherington  <cth@carlh.net>

	* Fix broken still-image import.

2014-12-04  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.22 released.

2014-12-04  Carl Hetherington  <cth@carlh.net>

	* Give a nicer error when writing config fails.

2014-12-04  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.21 released.

2014-12-04  c.hetherington  <cth@carlh.net>

	* Fix crash on dragging things in the timeline the second
	time it has been opened.

2014-12-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.20 released.

2014-12-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.19 released.

2014-12-03  c.hetherington  <cth@carlh.net>

	* Increase maximum JPEG2000 bandwidth to 1000 Mbit/s
	and allow the default control in config to go that
	high when allowed.

2014-12-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.18 released.

2014-12-03  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Lilian Lefranc.

	* Version 1.76.17 released.

2014-12-02  Carl Hetherington  <cth@carlh.net>

	* Open a dialog box on adding an image sequence
	so the user can specify the frame rate (#423) and
	request no calculation of digests (#446).

2014-11-25  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.16 released.

2014-11-25  Carl Hetherington  <cth@carlh.net>
